--- a/react-app-with-custom-components/src/components/slider/slider.css
+++ b/react-app-with-custom-components/src/components/slider/slider.css
@@ -7,8 +7,8 @@
 
 .slider-container__label {
   margin-bottom: 8px;
-  font-weight: bold;
   font-size: 1rem;
+  color: #666;
 }
 
 .slider-container__widget {
